# bili-sync

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  License  MIGRATION_GUIDE.md  README.md  api获取到的信息  config.toml  docker-compose.yml  index.html  make.bat  make1.bat  package-lock.json  package.json  rustfmt.toml  settings.html
.claude/: settings.local.json
.github/workflows/: build.yml  deploy-docs.yml  docker-build.yml  docs-deploy.yml  manual-build.yml
Build and Push Docker Image/: 16_Post Build and push to all registries.txt  17_Post Log in to CNB.Cool Registry.txt  18_Post Log in to Docker Hub.txt  19_Post Set up Docker Buildx.txt  1_Set up job.txt  20_Post Checkout code.txt  21_Complete job.txt  2_Checkout code.txt  3_Set up Docker Buildx.txt  4_Log in to Docker Hub.txt  5_Log in to CNB.Cool Registry.txt  6_Prepare Docker tags.txt  7_Extract metadata.txt  8_Combine all tags for single build.txt  9_Build and push to all registries.txt  system.txt
_app/: version.json
_app/immutable/assets/: 0.D9q3obgV.css  0.NqhZk8rX.css  3.DZRpPWHY.css  api.NcXIpolS.css  breadcrumb.DH7eit9J.css
_app/immutable/chunks/: 4Z14Qsdb.js  5BwgEbfe.js  AeIteut0.js  B3oLN5Oe.js  B92wWaER.js  BSHeNFie.js  BklcvC6Y.js  BoW7udwR.js  CFKmMrXd.js  DVFnCog-.js  DZTqjmeT.js  DsTsK5LD.js  Dz9LCCOu.js  VF2rYq1k.js  epDpuhXI.js  t8x5iSCf.js  tMh-h1UU.js  xIHaPDg4.js
_app/immutable/entry/: app.BCoCcOBE.js  app.CT4cIk-5.js  start.9g2_DE0U.js  start.CCd9gNBj.js
_app/immutable/nodes/: 0.-NEnOU7s.js  0.A4c0m4Du.js  1.C0O5nr5h.js  1.C7qk-QPr.js  2.5UlHoyha.js  2.DcY4lPoq.js  3.BahEFyei.js  3.BgqTiKEC.js  4.C-t8qi5-.js  5.90AwjLDn.js  5.De5TEuKs.js
assets/: README.md
crates/bili_sync/: Cargo.toml  build.rs
crates/bili_sync/src/: aria2_downloader.rs  database.rs  downloader.rs  error.rs  initialization.rs  main.rs  unified_downloader.rs  workflow.rs
crates/bili_sync_entity/: Cargo.toml
crates/bili_sync_entity/src/: lib.rs
crates/bili_sync_migration/: Cargo.toml
crates/bili_sync_migration/src/: lib.rs  m20240322_000001_create_table.rs  m20240505_130850_add_collection.rs  m20240709_130914_watch_later.rs  m20240724_161008_submission.rs  m20250122_062926_add_latest_row_at.rs  (+29 more)
docs/: FEATURE_SUMMARY.md  MIGRATION_GUIDE.md  QUEUE_FEATURE_SUMMARY.md  README.md  README_DELETE_TASK_QUEUE.md  SYSTEM_CONFIG_QUEUE_SUMMARY.md  all-features.md  args.md  artifacts-guide.md  artifacts-quick-reference.md  artifacts-screenshots-guide.md  bangumi-merge-fix.md  bangumi.md  bili-sync-v2.7.2-advanced-features.md  build-system.md  changelog.md  collection.md  comprehensive-comparison-summary.md  comprehensive-update-2025-06-03.md  configuration.md  deploy-guide.md  design.md  document-deploy-guide.md  faq.md  favorite.md  features.md  frontend-build-fix-2025-06-04.md  frontend.md  github-actions-build.md  index.md  installation.md  introduction.md  package-lock.json  package.json  program-deploy-guide.md  question.md  queue-management.md  quick-start.md  reset-function-fix.md  reset-functionality-guide.md  (+18 more)
docs/.vitepress/: config.js  config.mts
scripts/: 2.0.3_add_fanart.py
scripts/tools/: compress_image.py
web/: components.json  package-lock.json  package-simple.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.ts
web/src/: app.css
弹幕/: “喜见你眉秀似山，眼拥星霜”.zh-CN.default.ass  第01集.zh-CN.default.ass
(+217 files in other folders)
