[workspace]
members = ["crates/*"]
default-members = ["crates/bili_sync"]
resolver = "2"

[workspace.package]
version = "2.7.6"
authors = ["amtoaer <amtoaer@gmail.com>", "qq1582185982"]
license = "MIT"
description = "由 Rust & Tokio 驱动的哔哩哔哩同步工具"
edition = "2021"
publish = false

[workspace.dependencies]
bili_sync_entity = { path = "crates/bili_sync_entity" }
bili_sync_migration = { path = "crates/bili_sync_migration" }

# Build script dependencies
# walkdir = "2.4.0" # 已移除：未使用

anyhow = { version = "1.0.98", features = ["backtrace"] }
arc-swap = { version = "1.7.1", features = ["serde"] }
assert_matches = "1.5.0"
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] } # 仅在 migration 中使用
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros", "ws"] }
base64 = "0.22.1"
built = { version = "0.7.7", features = ["chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["env", "string"] }
cookie = "0.18.1"
cow-utils = "0.1.3"
dashmap = "6.1.0"
dirs = "6.0.0"
enum_dispatch = "0.3.13"
float-ord = "0.3.2"
futures = "0.3.31"
# glob = "0.3.1" # 已移除：未使用
handlebars = "6.3.2"
hex = "0.4.3"
html-escape = "0.2.13"
leaky-bucket = "1.1.2"
md5 = "0.7.0"
memchr = "2.7.4"
mime_guess = "2.0.5"
once_cell = "1.21.3"
parking_lot = "0.12.4"
prost = "0.13.5"
quick-xml = { version = "0.37.5", features = ["async-tokio"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [
    "charset",
    "cookies",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
rsa = { version = "0.9.8", features = ["sha2"] }
rust-embed = "8.7.2"
sea-orm = { version = "1.1.11", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1.11", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.36.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-util = { version = "0.7.15", features = ["io", "rt"] }
tokio-tungstenite = "0.24.0"
# toml = "0.8.22" # 已移除：配置已迁移到数据库
# toml_edit = "0.22.22" # 已移除：配置已迁移到数据库
# tower = "0.5.2" # 已移除：未使用
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
uuid = { version = "1.0", features = ["v4"] }

[workspace.metadata.release]
release = false
tag-message = ""
tag-prefix = ""
pre-release-commit-message = "chore: 发布 bili-sync {{version}}"
publish = false
pre-release-replacements = [
    { file = "../../docs/.vitepress/config.mts", search = "\"v[0-9\\.]+\"", replace = "\"v{{version}}\"", exactly = 1 },
    { file = "../../docs/introduction.md", search = " v[0-9\\.]+，", replace = " v{{version}}，", exactly = 1 },
]

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"